# m8t

./: Cargo.toml  readme.md
bin-server/: Cargo.toml
bin-server/src/: main.rs
document/: Cargo.toml
document/src/: document.rs  lib.rs  merge.rs
examples/default/: Cargo.toml
examples/default/src/: main.rs
examples/hierarchy/project-1/: spec1.md  spec2.md
examples/hierarchy/project-2/: spec1.md
examples/sample/project-1/: spec1.md  spec2.md
examples/sample/project-2/: spec1.md
fs-backend/: Cargo.toml
fs-backend/src/: backend.rs  backend_stdfs.rs  hierarchy.rs  lib.rs
parser/: Cargo.toml
parser/src/: parser.rs
sections/: Cargo.toml
sections/src/: body.rs  comment.rs  frontmatter.rs  lib.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/document/: create.rs  get.rs  mod.rs
server/src/document_resolver/: backend.rs  backend_stdfs.rs  mod.rs  resolve_document.rs  resolve_hierarchy.rs
server/src/handlers/: document.rs  hierarchy.rs  mod.rs
server/src/state/: document_parser.rs  document_resolver.rs  mod.rs
testutil/: Cargo.toml
testutil/src/: fixtures.rs
