[package]
name = "m8t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [ "bin-server",
    "document",
    "sections"
, "server", "testutil"]

[workspace.dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
log = "0.4.22"


[[bin]]
name = "server"
path = "bin-server/src/main.rs"