[package]
name = "bin-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio.workspace = true
axum.workspace = true
server = { path = "../server" }
clap = { version = "4.5.13", features = ["derive"] }
