[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true

document = { version = "0.1.0", path = "../document" }
sections = { version = "0.1.0", path = "../sections" }
testutil = { version = "0.1.0", path = "../testutil" }

[dev-dependencies]
vfs = "0.12.0"
